test/libsolidity/syntaxTests/comments/unicode_direction_override_1.sol
contract TimelockUpgrade {
    function confirmUpgrade() external {
        uint256 m;
        uint256 d;
        (/*year*/,/*month‮*/,d/*yad*/,m/*‬‬hour*/,/*minute*/,/*second*/) = BokkyDateTime.timestampToDateTime(block.timestamp);
    }
}

// ----
// ParserError 8936: (124-135): Mismatching directional override markers in comment or string literal.
